Added wrapper to persist diffs from Delta (a Model) to files.